Fix issue with centering project description text on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -123,6 +123,12 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 15px;
 }
 
+@media (max-width: 768px) {
+    .work-description {
+        width: 245px;
+    }
+}
+
 .work-description > a {
     color: #333333;
     text-decoration: none;
